modified image attributes to fix stretching

--- a/main.css
+++ b/main.css
@@ -58,14 +58,14 @@ header {
 
 /*Main Body Section Starts Here*/
 
+.container {
+  margin: 0px auto 30px auto;
+  Width: 80%;
+}
+
 body {
   font-family: Arial;
   line-height: 1.2em;
-}
-
-.container {
-  margin: 30px auto 0 auto;
-  Width: 80%;
 }
 
 h1, h3 {
@@ -73,7 +73,7 @@ h1, h3 {
 }
 
 h1 {
-  margin-bottom: 0px auto 50px auto;
+  margin: 0px auto 50px auto;
 }
 
 h3 {
@@ -86,13 +86,16 @@ p {
   font-size: 18px;
 }
 
+/* Images Section */
 .imgcontainer {
   position: relative;
+  margin: 50px auto;
   width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  
 }
 
 .photo {
@@ -102,15 +105,16 @@ p {
   height: 250px;
   transition: .2s ease;
   backface-visibility: hidden;
-
+  object-fit: cover;
+  object-position: right center;
 }
 
 .img {
-  width: 100%;
-  margin: 2.5px;
+  margin: 0 auto 0 auto;
   position: relative;
-  margin-top: 25px;
+  padding: 0 2.5px;
 }
+
 .overlay {
   background: rgba(0,0,0,0.4);
   transition: .2s ease;
@@ -153,7 +157,6 @@ p {
   font-weight: bold;
   font-style: italic;
   padding: 12px;
-  margin-top: 50px;
 }
 
 #footer ul {
